--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,8 +44,12 @@ dependencies {
 
     // Dependencies for circular view
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.google.code.gson:gson:2.8.9'
+
 
     implementation platform('com.google.firebase:firebase-bom:32.2.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-database:19.2.1'
+
 }
