--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:19.2.1'
     implementation 'com.google.firebase:firebase-storage:19.2.2'
     implementation 'com.google.firebase:firebase-firestore:23.0.3'
+    implementation 'com.firebaseui:firebase-ui-firestore:8.0.1'
+
 
 
     implementation 'com.google.zxing:core:3.4.1'
